--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -1,14 +1,14 @@
 
-.app {
-  height: 100vh;
-  max-width: 1274px;
-  margin: 0 auto;
-
-  display: flex;
-  flex-direction: column;
-
-
-  .container {
-    display: flex;
-  }
-}
+//.app {
+//  max-width: 1274px;
+//  margin: 0 auto;
+//
+//  //display: flex;
+//  //flex-direction: column;
+//
+//  .container {
+//    display: flex;
+//    flex-wrap: wrap;
+//    gap: 20px;
+//  }
+//}
