--- a/src/features/main/Poster/Poster.module.scss
+++ b/src/features/main/Poster/Poster.module.scss
@@ -1,49 +1,49 @@
-.poster {
-  margin-left: 20px;
-
-  width: 100%;
-  height: 430px;
-
-  .title {
-    font-weight: 900;
-    font-size: 120px;
-    line-height: 145px;
-    color: var(--bg);
-  }
-
-  .product {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-
-    padding: 0 40px;
-
-    .description {
-
-      .subTitle {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 20px;
-
-        color: var(--sea);
-      }
-
-      .text {
-        font-weight: 700;
-        font-size: 42px;
-        line-height: 51px;
-
-        margin: 24px 0;
-        color: var(--light);
-      }
-    }
-
-    .image {
-      position: absolute;
-      width: 462px;
-      height: 359px;
-      top: -60px;
-      left: 450px;
-    }
-  }
-}
+//.poster {
+//  margin-left: 20px;
+//
+//  width: 100%;
+//  height: 430px;
+//
+//  .title {
+//    font-weight: 900;
+//    font-size: 120px;
+//    line-height: 145px;
+//    color: var(--bg);
+//  }
+//
+//  .product {
+//    display: flex;
+//    justify-content: space-between;
+//    position: relative;
+//
+//    padding: 0 40px;
+//
+//    .description {
+//
+//      .subTitle {
+//        font-weight: 500;
+//        font-size: 16px;
+//        line-height: 20px;
+//
+//        color: var(--sea);
+//      }
+//
+//      .text {
+//        font-weight: 700;
+//        font-size: 42px;
+//        line-height: 51px;
+//
+//        margin: 24px 0;
+//        color: var(--light);
+//      }
+//    }
+//
+//    .image {
+//      position: absolute;
+//      width: 462px;
+//      height: 359px;
+//      top: -60px;
+//      left: 450px;
+//    }
+//  }
+//}
